fix sponsor label-pay and tag dash visibility

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,6 +26,12 @@ body{
     background-color: cornflowerblue;
     border-color: burlywood;
 }
+//sponsored tag dashboard
+.label-sponsored-dash {
+    background-color:burlywood; 
+    color: white;
+    border-radius: 5px;
+}
 .prova-display{
     display: flex;
     .login-estetic{
